kubernetes/tls certificates/app-ns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: app-ns-ingress
  namespace: app
spec:
  tls:
  - hosts:
    - 'app.explosion204.space'
    secretName: ingress-certificate-tls
  rules:
  - host: app.explosion204.space
    http:
      paths:
      - backend:
          service:
            name: java-frontend
            port:
              number: 8080
        path: /
        pathType: Prefix
