kubernetes/tls certificates/kubernetes-dashboard-ns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: kubernetes-dashboard-ns-ingress
  namespace: kubernetes-dashboard
spec:
  tls:
  - hosts:
    - 'dashboard.explosion204.space'
    secretName: ingress-certificate-tls
  rules:
  - host: dashboard.explosion204.space
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
        path: /
        pathType: Prefix
